--- a/src/index.css
+++ b/src/index.css
@@ -918,6 +918,7 @@ body {
 .faq-section {
   margin: 0 auto 60px;
   max-width: 1200px;
+  max-width: 950px;
 }
 
 .faq-title {
@@ -974,14 +975,16 @@ body {
 }
 
 .faq-toggle-icon {
-  font-size: 1.5rem; /* Размер иконки */
-  color: #6b52ae; /* Цвет иконки */
+  font-size: 1.5rem;
+  /* Размер иконки */
+  color: #6b52ae;
+  /* Цвет иконки */
 }
 
 /* University Section */
 .university-section {
   text-align: center;
-  max-width: 1200px;
+  max-width: 950px;
   margin: 0 auto 60px;
 }
 
@@ -1023,13 +1026,18 @@ body {
   content: "";
   display: block;
   width: 3px;
-  min-height: 50px; /* Минимальная высота линии */
-  height: 100%; /* Полная высота блока */
-  background-color: #6b52ae; /* Цвет вертикальной линии */
+  min-height: 50px;
+  /* Минимальная высота линии */
+  height: 100%;
+  /* Полная высота блока */
+  background-color: #6b52ae;
+  /* Цвет вертикальной линии */
   border-radius: 5px;
   position: absolute;
-  top: 10px; /* Отступ от верхнего края */
-  left: 0; /* Линия располагается слева */
+  top: 10px;
+  /* Отступ от верхнего края */
+  left: 0;
+  /* Линия располагается слева */
 }
 
 
@@ -1040,7 +1048,7 @@ body {
   text-align: center;
   padding: 20px;
   border-radius: 16px;
-  max-width: 1200px;
+  max-width: 950px;
   margin: 0 auto;
   box-sizing: border-box;
 }
@@ -1088,11 +1096,13 @@ h3.cta-section-title {
   }
 
   .trust-point {
-    padding-left: 20px; /* Увеличиваем отступ для псевдоэлемента */
+    padding-left: 20px;
+    /* Увеличиваем отступ для псевдоэлемента */
   }
 
   .trust-point::before {
-    min-height: 40px; /* Сохраняем минимальную высоту линии */
+    min-height: 40px;
+    /* Сохраняем минимальную высоту линии */
   }
 
   .faq-header {
@@ -1110,8 +1120,10 @@ h3.cta-section-title {
 
 /* Основной футер */
 .footer {
-  background-color: #3a3a3a; /* Цвет фона */
-  color: #fff; /* Цвет текста */
+  background-color: #3a3a3a;
+  /* Цвет фона */
+  color: #fff;
+  /* Цвет текста */
   padding: 30px 20px;
 }
 
@@ -1119,7 +1131,7 @@ h3.cta-section-title {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  max-width: 1200px;
+  max-width: 950px;
   margin: 0 auto;
   flex-wrap: wrap;
   gap: 20px;
@@ -1134,7 +1146,8 @@ h3.cta-section-title {
 }
 
 .footer-logo {
-  width: 150px; /* Размер логотипа */
+  width: 150px;
+  /* Размер логотипа */
   margin-bottom: 10px;
 }
 
@@ -1171,7 +1184,8 @@ h3.cta-section-title {
 }
 
 .whatsapp-button {
-  background-color: #22c55e; /* Зеленый цвет кнопки */
+  background-color: #22c55e;
+  /* Зеленый цвет кнопки */
   color: #fff;
   border: none;
   border-radius: 8px;
@@ -1215,12 +1229,285 @@ h3.cta-section-title {
 
 @media (max-width: 1200px) and (min-width: 800px) {
   .footer-divider {
-    width: 55%; /* Ширина divider для диапазона от 800 до 1200 пикселей */
+    width: 55%;
+    /* Ширина divider для диапазона от 800 до 1200 пикселей */
   }
 }
 
 @media (max-width: 1200px) {
   .footer-divider {
-    width: 55%; 
+    width: 55%;
+  }
+}
+
+
+/* Result Page */
+
+.result-container {
+  position: relative;
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* padding: 20px; */
+  overflow-x: hidden;
+  /* Убираем горизонтальную прокрутку */
+}
+
+.result-container img {
+  position: absolute;
+  width: 100vw;
+  /* Гарантируем, что изображение занимает всю ширину экрана */
+  height: auto;
+  /* Высота на всю высоту экрана */
+  height: -webkit-fill-available;
+  object-fit: cover;
+  z-index: 0;
+  /* Изображение позади контента */
+}
+
+.result-content-elements {
+  width: 58%;
+}
+
+.result-content {
+  position: relative;
+  max-width: 1100px;
+  top: -40px;
+  width: 90%;
+  /* padding: 40px 20px; */
+  border-radius: 12px;
+  color: #ffffff;
+  text-align: left;
+  z-index: 1;
+  /* Контент поверх изображения */
+  box-sizing: border-box;
+  /* Гарантируем, что padding входит в ширину */
+}
+
+.result-content p {
+  width: fit-content;
+}
+
+.result-button {
+  background: #9c27b0;
+  color: #fff;
+  border: none;
+  border-radius: 6px;
+  padding: 10px 20px;
+  font-size: 16px;
+  font-weight: bold;
+  cursor: pointer;
+  /* margin-top: 40px ; */
+  /* margin-bottom: 20px; */
+}
+
+.result-button:hover {
+  background: #ab47bc;
+}
+
+.result-content h2 {
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+.result-content p {
+  font-size: 16px;
+  line-height: 1.5;
+  margin-bottom: 10px;
+}
+
+.result-content .highlight {
+  font-weight: bold;
+  color: #ffb300;
+}
+
+@media (max-width: 1030px) {
+  .result-container img {
+    content: url('/public/images/fonresultadaptive.png');
+    /* Заменяем изображение */
+  }
+
+  .result-content {
+    display: flex;
+    justify-content: center;
+  }
+}
+
+/* Адаптив для мобильных устройств */
+@media (max-width: 768px) {
+  .result-container img {
+    content: url('/public/images/fonresultadaptive.png');
+    /* Заменяем изображение */
+  }
+
+  .result-content-elements {
+    width: unset;
+    /* Убираем ширину */
+  }
+
+  .result-content {
+    padding: 20px 15px;
+  }
+
+  .result-content h2 {
+    font-size: 20px;
+  }
+
+  .result-content p {
+    font-size: 14px;
+  }
+}
+
+
+.financial-aid {
+  margin-top: 20px;
+  font-size: 14px;
+}
+
+.radio-group {
+  display: flex;
+  flex-wrap: wrap;
+  /* Для переноса на новую строку, если не хватает места */
+  gap: 20px;
+  margin-top: 10px;
+}
+
+.radio-group label {
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+  cursor: pointer;
+}
+
+.radio-group input[type="radio"] {
+  margin-right: 10px;
+}
+
+/* Адаптивные стили */
+@media (max-width: 768px) {
+  .financial-aid {
+    font-size: 13px;
+  }
+
+  .radio-group {
+    gap: 10px;
+    /* Уменьшаем расстояние между радиокнопками */
+  }
+
+  .radio-group label {
+    font-size: 12px;
+  }
+}
+
+
+.budget-analysis-container {
+  padding: 20px;
+  background-color: #f8f8f8;
+}
+
+.budget-analysis-title {
+  font-size: 28px;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.budget-block {
+  background: #ffffff;
+  padding: 20px;
+  margin-bottom: 20px;
+  border-radius: 12px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.block-title {
+  font-size: 20px;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.block-title span {
+  font-size: 24px;
+  color: #9c27b0;
+}
+
+.block-wrapper {
+  display: flex;
+  /* flex-direction: column; */
+  gap: 15px;
+}
+
+.block-description {
+  font-size: 16px;
+  color: #4a4a4a;
+}
+
+.block-content {
+  display: flex;
+  align-items: flex-start;
+  gap: 20px;
+}
+
+.block-image {
+  max-width: 150px;
+  height: auto;
+}
+
+.block-text p {
+  font-size: 16px;
+  line-height: 1.5;
+  margin-bottom: 10px;
+}
+
+.salary-table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 10px;
+}
+
+.salary-table th,
+.salary-table td {
+  border: 1px solid #ddd;
+  padding: 10px;
+  text-align: left;
+}
+
+.salary-table th {
+  background-color: #f4f4f4;
+}
+
+.salary-table tr:nth-child(even) {
+  background-color: #f9f9f9;
+}
+
+/* Адаптивность */
+@media (max-width: 768px) {
+  .block-wrapper {
+    flex-direction: column;
+  }
+
+  .block-title {
+    font-size: 18px;
+  }
+
+  .block-description {
+    font-size: 14px;
+  }
+
+  .block-content {
+    flex-direction: column;
+  }
+
+  .block-image {
+    max-width: 100px;
+  }
+
+  .salary-table th,
+  .salary-table td {
+    font-size: 12px;
   }
 }
